--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+
+    </style>
+<h1> Hallo ich bin Johann</h1>
 </head>
 <body>
 
